[package]
name = "cactc_core"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
bumpalo = { version = "3.19.0", features = ["collections"] }
chumsky = "0.11.1"
logos = "0.15.1"
miette = { version = "7.6.0", features = ["fancy"] }
once_cell = "1.21.3"
thiserror = "2.0.17"
